# Qt4CMakeExample

./: .travis.yml  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
